--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "powershell -Command \"$env:NODE_OPTIONS='--openssl-legacy-provider'; react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
